--- a/dl/ios/xuediansha.plist
+++ b/dl/ios/xuediansha.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.onemeter.learnsomething</string>
+				<string>co.onemeter.learnsomething</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
